@@ -1,8 +1,9 @@
 Changelog
 ---------
 2.0.5
-- FIXED: Capability-related crash with Integrated Dynamics
 - CHANGE: Dynamic Texture blocks now require a default item
+- CHANGE: Config files will now go in a subdirectory for each mod
+- FIXED: Capability-related crash with Integrated Dynamics
 
 2.0.4
 - ADDED: Player Animation Module
